src/components/play-exercice/Timer.css
/* Sets the containers height and width */

.timer {
    position: relative;
    height: 300px;
    width: 300px;
}

/* Removes SVG styling that would hide the time label */

.base-timer__circle {
    fill: none;
    stroke: none;
}

.time-label {
    position: absolute;
    /* Size should match the parent container */
    width: 300px;
    height: 300px;
    /* Keep the label aligned to the top */
    top: 0;
    /* Create a flexible box that centers content vertically and horizontally */
    display: flex;
    align-items: center;
    justify-content: center;
    /* Sort of an arbitrary number; adjust to your liking */
    font-size: 72px;
    color: var(--ion-color-primary);
}

.remaining {
    /* Just as thick as the original ring */
    stroke-width: 6px;
    /* Makes sure the animation starts at the top of the circle */
    transform: rotate(90deg);
    transform-origin: center;
    /* One second aligns with the speed of the countdown timer */
    transition: 500ms linear all;
    /* Allows the ring to change color when the color value updates */
    stroke: var(--ion-color-primary);
    fill: none;
}

.background {
    stroke: var(--ion-color-primary-contrast);
    stroke-width: 5px;
    fill: none;
}

.base-timer__svg {
    /* Flips the svg and makes the animation to move left-to-right */
    transform: scaleX(-1);
    border: 15px;
}

.remaining.paused {
    transition-duration: 0s !important;
}

